selected all the required elements using QuerySelector

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <h1>Welcome to Fun with Triangles</h1>
     <p>Enter the angles in below input boxes and we will tell you if those angles make a Triangle</p>
     <label for="angle-one">First Angle: </label>
-    <input type="text" id="angle-one">
+    <input type="text" class="angles">
     <label for="angle-two">Second Angle: </label>
-    <input type="text" id="angle-two">
+    <input type="text" class="angles">
     <label for="angle-three">Third Angle: </label>
-    <input type="text" id="angle-three">
+    <input type="text" class="angles">
     <button id="check-sum-of-angle">Check</button>
     <textarea id="output-area"></textarea>
 </body>
+<script src="app.js"></script>
 </html>
