--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Triangle Quiz</title>
 </head>
 <body>
+
+    <p><a href="./quiz.html">Take a Quiz</a></p>
     <h1>Welcome to Fun with Triangles</h1>
     <p>Enter the angles in below input boxes and we will tell you if those angles make a Triangle</p>
     <label for="angle-one">First Angle: </label>
