--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <p><a href="./quiz.html">Take a Quiz</a></p>
+    <p><a href="./chcek-hypotenuse.html">Check Hypotenuse</a></p>
     <h1>Welcome to Fun with Triangles</h1>
     <p>Enter the angles in below input boxes and we will tell you if those angles make a Triangle</p>
     <label for="angle-one">First Angle: </label>
